# MIPT-pardistr-2019

./: README.md
00-task/: CMakeLists.txt  main.cpp
Mpi_1_MapReduce/: CMakeLists.txt  README.md  main.cpp  mapper.hpp  reducer.hpp
Mpi_1_MapReduce/reduce outputs/: 0  1
Mpi_2_MapReduce_OpenMP/: CMakeLists.txt  main.cpp  mapper.hpp  reducer.hpp  split.sh
Mpi_2_MapReduce_OpenMP/input files/: 2.txt  onegin
Mpi_2_MapReduce_OpenMP/reduce outputs/: 0  1  2  3  4  5
Mpi_2_MapReduce_OpenMP/test/: fill.sh  split.sh
